# pishock_rs

./: Cargo.toml  README.md
examples/: README.md  env_shock.rs  everything_and_the_kitchen_sink.rs
src/: api_endpoints.rs  errors.rs  interpolation.rs  lib.rs  pishock_account.rs  pishocker.rs
